--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ img{
         height: 340px;
     width: 340px;
     padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 #card2{
     background-color: magenta;
@@ -24,9 +25,11 @@ img{
     height: 340px;
     width: 340px;
     padding: 20px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 #card1{
  margin-left: 100px;
+    
 }
 button{
     font-family: jost;
